# bevy_web_video

./: Cargo.toml  README.md  index.html  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: pages.yml
examples/captions/: Cargo.toml
examples/captions/src/: lib.rs
examples/cubes/: Cargo.toml  index.html
examples/cubes/src/: lib.rs
examples/cubes/web/: index.html
examples/simple/: Cargo.toml  index.html
examples/simple/src/: lib.rs
examples/skyvid/: Cargo.toml
examples/skyvid/src/: bluesky.rs  lib.rs
examples/web/: index.html
src/: asset.rs  commands.rs  event.rs  extensions.rs  lib.rs  listener.rs  registry.rs  render.rs
src/registry/: asset.rs
xtask/: Cargo.toml
xtask/src/: main.rs
