[package]
name = "bevy_web_video"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
webgpu = ["bevy/webgpu"]

[dependencies]
bevy = "0.16.1"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "HtmlVideoElement",
    "HtmlMediaElement",
] }
# Keep in sync with bevy
# https://github.com/bevyengine/bevy/issues/11079
wgpu-types = "24.0.0"

[profile.release]
opt-level = "s"
