[workspace]
members = ["examples/cubes"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bevy = "0.16.1"
wasm-bindgen = "0.2.100"

[package]
name = "bevy_web_video"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
webgpu = ["bevy/webgpu"]

[dependencies]
bevy = { workspace = true }
js-sys = "0.3.77"
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "HtmlVideoElement",
    "HtmlMediaElement",
] }
# Keep in sync with bevy
# https://github.com/bevyengine/bevy/issues/11079
wgpu-types = "24.0.0"

[profile.release]
opt-level = "s"
